@@ -162,7 +162,8 @@ POSSIBILITY OF SUCH DAMAGE.
 #define TORRENT_USE_PURGABLE_CONTROL 1
 
 #if MAC_OS_X_VERSION_MIN_REQUIRED >= 1070
-# ifdef TORRENT_USE_OPENSSL
+// on OSX, use the built-in common crypto for built-in
+# if !defined TORRENT_USE_OPENSSL && !defined TORRENT_USE_GCRYPT
 #  define TORRENT_USE_COMMONCRYPTO 1
 # endif // TORRENT_USE_OPENSSL
 #endif // MAC_OS_X_VERSION_MIN_REQUIRED
